--- a/tlsn/examples/Cargo.toml
+++ b/tlsn/examples/Cargo.toml
@@ -61,6 +61,11 @@ name = "twitter_dm"
 path = "twitter/twitter_dm.rs"
 
 [[example]]
+name = "twitter_settings"
+path = "twitter/settings.rs"
+
+
+[[example]]
 name = "discord_dm"
 path = "discord/discord_dm.rs"
 
